# SprintSense

./: .bandit  .coderabbit.yml  .env.dev.template  .env.example  .env.prod.template  .env.staging.template  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  DEPLOYMENT.md  Makefile  README.md  analyze_bmad_dependencies.py  bandit.yaml  claude_suggestions.md  dev.sh  package-lock.json  package.json  pyproject.toml  test-coderabbit.py  warp.md
backend/: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  STORY_3.2_IMPLEMENTATION_SUMMARY.md  alembic.ini  cookies.txt  pyproject.toml  pytest.ini  requirements.txt  test_failure_analysis.md
backend/app/: app.py  main.py
backend/app/api/: ai_suggestions_simple.py  models.py
backend/app/core/: ai_service.py  auth.py  cache.py  cache_service.py  circuit_breaker.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  logging_config.py  metrics_collector.py  metrics_logger.py  performance.py  security.py  websocket_manager.py
backend/app/infra/: db.py  models.py
backend/app/routes/: sprint_completion.py  sprint_routes.py  velocity.py
backend/app/schemas/: __init__.py  project_goals.py  quality_metrics.py  recommendation.py  sprint.py  sprint_completion.py  velocity.py
backend/app/services/: __init__.py  project_goals.py  recommendations_service.py  sprint_completion_service.py  sprint_service.py  teams.py  velocity_service.py
backend/app/tests/: test_recommendations.py
backend/deploy/: quality-metrics.yml
backend/docs/: authentication.md
backend/docs/stories/: story-4.6-qa.md  story-4.6.md
backend/migrations/: env.py
backend/migrations/versions/: 0c438ab6290e_add_project_goals_table.py  147879dc5463_add_users_table.py  20250921_add_feedback_reason.py  20250921_create_sprints_table.py  20250925_add_sprint_velocity.py  5311c1cffac8_add_invitations_table.py  84f0faf25685_create_users_table.py  9572ac18b8fc_add_teams_and_team_members_tables.py  ca877e32a459_add_work_items_table.py
backend/monitoring/: README.md
backend/monitoring/alertmanager/: alertmanager.yml
backend/qa/gates/: 8.3-security-compliance.yml
backend/scripts/: run_ai_prioritization_tests.py  seed_test_user.py
backend/src/routes/: work_items.py
backend/tests/: README_AI_PRIORITIZATION_TESTS.md  ai_suggestions_test_report.md  conftest.py  requirements-test.txt  test_ai_prioritization_suite.md  test_ai_suggestions_clean.py  test_app.py  test_archive_work_item.py  test_auth.py  test_auth_api.py  test_database.py  test_dependency_analysis.py  test_health.py  test_project_goals_api.py  test_project_goals_api_fixed.py  test_security.py  test_sprint_completion.py  test_user_service.py  test_users_api.py
backend/tests/chaos/: conftest.py  test_quality_metrics_chaos.py
backend/tests/integration/: test_edit_work_item_flow.py  test_get_team.py  test_health_checks.py  test_invitations_api.py  test_teams_api.py
backend/tests/ml/: test_models.py  test_prediction_service.py
backend/tests/performance/: test_ai_prioritization_performance.py
backend/tests/security/: conftest.py  test_mocks.py
backend/tests/services/: test_sprint_assignment_service.py  test_sprint_service.py  test_velocity_service.py
backend/tests/test_models/: conftest.py  test_work_item.py
backend/tests/unit/: conftest.py  test_invitation_endpoints.py  test_invitation_service.py  test_recommendations.py  test_team_service.py  test_work_item_model.py  test_work_item_schemas.py  test_work_item_simple.py  test_work_item_status_update.py
backend/tickets/: SPRINT-135-fix-rbac-tests.md
frontend/: .env.test  .eslintrc.json  Dockerfile.dev  Dockerfile.prod  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.e2e.config.ts  pnpm-lock.yaml  pyproject.toml  setupTests.ts  tsconfig.app.json  vitest.config.ts
frontend/.github/workflows/: e2e-tests.yml
frontend/docs/qa/: qa-gate-4.5.md
frontend/playwright-report/: index.html
frontend/src/: App.test.tsx  App.tsx  test-setup.ts
frontend/src/__mocks__/: test-utils.tsx
frontend/src/__tests__/: QualityDashboard.perf.test.tsx  RecommendationsPanel.test.tsx
frontend/src/api/: sprint.ts
frontend/src/components/: SprintBalanceDashboard.tsx  WorkItemSprintAssignment.tsx
frontend/src/config/: index.ts  test.ts
frontend/src/hooks/: useArchiveWorkItem.ts  useCreateWorkItem.ts  useEditWorkItem.ts  usePriorityUpdate.ts  useQualityMetrics.ts  useSprintBalance.ts  useToast.ts  useWebSocket.ts  useWorkItemRecommendations.ts  useWorkItemStatus.ts  useWorkItems.ts
frontend/src/pages/: BacklogPage.tsx  CreateTeamPage.tsx  DashboardPage.tsx  HealthPage.tsx  LoginPage.test.tsx  LoginPage.tsx  RegisterPage.test.tsx  RegisterPage.tsx  TeamDashboardPage.tsx
frontend/src/services/: api.ts  authService.ts  dependencies.ts  goalService.ts  recommendationsService.ts  sprintService.ts  velocityService.ts  webSocketService.ts  workItemService.ts  workItemSprintService.ts
frontend/src/store/: appStore.ts
frontend/src/stores/: backlogStore.ts  goalStore.ts  sprintStore.ts  workItemStore.ts
frontend/src/test-utils/: buttonMocks.ts  mocks.ts  setup.ts
frontend/src/theme/: index.ts  theme.test.ts
frontend/src/types/: dependencies.ts  goal.types.ts  invitations.ts  quality-metrics.types.ts  recommendations.types.ts  sprint.ts  sprint.types.ts  user.types.ts  workItem.types.ts
frontend/src/views/: SprintManagementView.tsx
frontend/test-results/: .last-run.json
frontend/test-results/sprint_lifecycle-Sprint-Ma-0994b-s-invalid-state-transitions-chromium-retry1/: video.webm
frontend/test-results/sprint_lifecycle-Sprint-Ma-0994b-s-invalid-state-transitions-firefox/: video.webm
frontend/test-results/sprint_lifecycle-Sprint-Ma-0994b-s-invalid-state-transitions-firefox-retry1/: video.webm
frontend/test-results/sprint_lifecycle-Sprint-Ma-5646f-ts-overlapping-sprint-dates-chromium-retry1/: video.webm
frontend/test_cycle/: README.md  pyproject.toml  report.html
frontend/test_cycle/test-reports/: report.html  report.json
(+480 files in other folders)
