[tool.poetry]
name = "sprintsense"
version = "0.1.0"
description = "SprintSense AI-powered sprint planning and dependency analysis"
authors = ["SprintSense Team"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
torch = "2.1.0"
numpy = "^1.23.4"
pandas = "^1.5.0"
transformers = "^4.22.2"
redis = "^4.3.4"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
httpx = "^0.23.0"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.981"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
