[tool.poetry]
name = "sprintsense"
version = "0.1.0"
description = "SprintSense AI-powered sprint planning and dependency analysis"
authors = ["SprintSense Team"]
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.117.1"
uvicorn = "^0.18.3"
torch = "2.1.0"
numpy = "^1.23.4"
pandas = "^1.5.0"
transformers = "^4.22.2"
redis = "^4.3.4"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
httpx = "^0.23.0"
python-dotenv = "^0.21.0"
pydantic = "^2.11.9"
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
alembic = "^1.16.5"
pydantic-settings = "^2.11.0"
psycopg = "^3.2.10"
structlog = "^25.4.0"
python-jose = "^3.5.0"
passlib = "^1.7.4"
bcrypt = "4.0.1"
py-bcrypt = "0.4.0"
email-validator = "^2.3.0"
aiosqlite = "^0.21.0"
prometheus-client = "^0.23.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.981"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
