[tool.poetry]
name = "sprintsense-backend"
version = "0.1.0"
description = "SprintSense backend API"
authors = ["hazlamahedich <65190465+hazlamahedich@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
structlog = "^24.1.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-exporter-otlp = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
psycopg = {extras = ["binary"], version = "^3.2.10"}
alembic = "^1.13.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
email-validator = "^2.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.5.0"
httpx = "^0.26.0"
prometheus-client = "^0.23.1"
transformers = "^4.56.2"
torch = "^2.8.0"
xgboost = "^3.0.5"
scikit-learn = "^1.7.2"
numpy = "^2.3.3"
pandas = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
coverage = "^7.4.0"
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
aiosqlite = "^0.19.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m 'not integration'')",
]
