[tool.poetry]
name = "sprintsense-frontend"
version = "0.1.0"
description = "Frontend for Sprintsense"
authors = ["Sherwin Gorechomante"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
test-cycle = {path = "test_cycle", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
